--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-fileupload": "^0.1.4",
     "mysql": "^2.13.0",
     "sql": "^0.76.1"
   }
