--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-fileupload": "^0.1.4",
+    "mongodb": "^2.2.30",
     "mysql": "^2.13.0",
     "sql": "^0.76.1"
   }
